--- a/deliverables/DOER.tex
+++ b/deliverables/DOER.tex
@@ -15,7 +15,7 @@ Define and create a microblogging platform using an opportunistic network. It sh
 
 \subsection*{Primary Objectives}
 \begin{itemize}
-\item Design and implement a protocol for passing messages and necessary metadata between nodes in close proximity.
+\item design and implement a protocol for discovering nodes in close proximity and passing messages and necessary metadata between them.
 \item Create a core library to manage message storage and routing.
 \item Implement a simple epidemic routing algorithm to send messages to all available nodes.
 \item Design a routing algorithm using user metadata to route messages while disguising message content and metadata.
@@ -23,7 +23,7 @@ Define and create a microblogging platform using an opportunistic network. It sh
 
 \subsection*{Secondary Objectives}
 \begin{itemize}
-\item Create a smartphone implementation using the core library.
+\item Create a smartphone UI.
 \item Implement a more advanced routing algorithm.
 \item Design and implement a mechanism to decide whether a node is trustworthy or not.
 \item Evaluate the performance of the implemented routing algorithms.
@@ -35,7 +35,7 @@ Define and create a microblogging platform using an opportunistic network. It sh
 \end{itemize}
 
 \section*{Ethics}
-In order to test the real world performance of the network, some metadata will be collected on users. This may include:
+In order to test the real world performance of the network, we may ask people to use the application. In this case, some metadata will be collected on users, with their consent. This may include:
 \begin{itemize}
 \item An anonymous user ID.
 \item Anonymised 'Friends list' (or equivalent) of users.
@@ -44,6 +44,6 @@ In order to test the real world performance of the network, some metadata will b
 \end{itemize}
 
 \section*{Resources}
-This project will require an Android based smartphone or tablet. If more are needed in later stages, they will be provided by the project supervisor.
+This project will require an Android tablet from the school. If more are needed in later stages, they will be provided by the project supervisor.
 
 \end{document}
