--- a/deliverables/spec.tex
+++ b/deliverables/spec.tex
@@ -15,9 +15,11 @@ This document details a secure microblogging platform using a pocket switched, o
 \section*{Terminology}
 A \textbf{node} is any device capable of storing and forwarding messages. It does not have to be a user. For example, a public transport vehicle would make an ideal node because it will encounter lots of users.
 
-A \textbf{user} is any node with a username and encryption key capable of sending and recieving messages.
+A \textbf{user} is any node with a username and encryption key, allowing them to send and recieve messages.
 
 A \textbf{message} is a text-based microblog post broadcasted from a user to all interested users.
+
+A \textbf{direct message} is a message sent to a single user. It is encrypted so only that user can read it.
 
 Two nodes make a \textbf{connection} when they are in close proximity to each other and have established a communication channel.
 
@@ -25,8 +27,9 @@ Two nodes make a \textbf{connection} when they are in close proximity to each ot
 A user's data consists of:
 \begin{itemize}
 \item An RSA 4096 bit public/private key pair for asymetric encryption.
-\item A unique username which will be linked to a user's public key.
-\item A (hidden) list of users (and their public keys) to follow.
+\item A unique username.
+\item A friends list of users to follow.
+\item A list of hashtags to follow.
 \end{itemize}
 
 \section*{Messages}
@@ -34,31 +37,34 @@ Messages consist of a sender, a message id and message contents.
 
 The sender takes the form of a username, and the message contents is a string.
 
-The message id is used to verify that the message is intact, was sent from the user it says it was, and that it has not been modified. It consists of SHA-256 hash of the message contents, plus the date and time that the message was sent in ISO-8601 format, all encrypted with the senders private key. All users with the senders public key can then verify the message. If the message is unverifiable, it is discarded and the sender is notified via a secure direct message.
+The message id is used to verify that the message has not been modified. It consists of SHA-256 hash of the message contents, plus the date and time that the message was sent in ISO-8601 format, all encrypted with the senders private key. All users with the senders public key can then verify the message. If the message is unverifiable, it is discarded and the sender is notified via a secure direct message.
 
 Secure direct messaging is implemented by encrypting the message contents with the public key of the reciever and adding the hashtag \#to\_\textless username\textgreater.
-
 
 Nodes will store a finite number of messages. Nodes will also store a distribution count. This is incremented when the message is sent to another node or another node indicates that it it already has the message. When a message is to be evicted to make space, the most distributed message will be removed.
 
 Nodes may use a large bloom filter or similar construct to record that a message has been seen even if it has been deleted.
 
+
 \section*{Routing algorithm}
-Every user has a list, F, of interests. Interests include people they would like to recieve messages from (in the form of their username), hashtags (in the form \#tag), and messages mentioning a certain user (in the form @user). This will, by default, incude messages mentioning the user.
+Every user, $u$ has a list, $I(u)$, of interests. Interests include people they would like to recieve messages from (in the form of their username), hashtags (in the form \#tag), and messages mentioning a certain user (in the form \#to\_user). This will, by default, incude messages mentioning the user $u$.
 
-The goal of this routing algorithm is to encode the interests in such a way that they cannot be reverse engineered, and to include the interests of recently encountered nodes (as there is a higher probability of encountering them soon).
+The routing algorithm must encode the interests in such a way that they cannot be reverse engineered, and include the interests of recently encountered nodes (as there is a higher probability of encountering them soon).
 
-Every node also has a record, R, of interests of people they have recently met. This is stored in the form of a stable bloom filter (http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.85.1569), which is designed to evict old entries.
+Every node also has a record, $R(u)$, of interests of people they have recently met. This is stored in the form of a stable bloom filter (http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.85.1569), which is designed to evict old entries.
 
 It may be possible to find a better heuristic to predict which users a node should relay messages for.
 
-We may use a modified form of the stable bloom filter where the total of all of the filter cells is unable to exceed some maximum value. If it is exceeded, then all of the cell values are decremented until the maximum value is no longer exceeded. This provides the benefit of requiring no randomness and should allow bloom filters to be added together without affecting the properties of the cumulative bloom filter.
+We may use a modified form of the stable bloom filter where the total of all of the filter cells is unable to exceed some maximum value. If it is exceeded, then all of the cell values are decremented until the maximum value is no longer exceeded. This provides the benefit of requiring no additional randomness and should allow bloom filters to be added together without affecting the properties of the cumulative bloom filter.
 
-These can all be combined to create a bloom filter, I, containing interests that the node would like to recieve messages about (both to read and to pass on). I is calculated by adding SO(F), the SSNR-OSNR (http://www.sciencedirect.com/science/article/pii/S0140366410004767 without the salt) of F and B(R), R converted into a normal bloom filter.
+These can all be combined to create a bloom filter, $B(u)$, containing interests that the node would like to recieve messages about (both to read and to pass on). $B(u)$ is calculated by adding $SO(I(u))$ - the SSNR-OSNR (http://www.sciencedirect.com/science/article/pii/S0140366410004767 without the salt) of $I(u)$ - and $R(u)$.
 
-I now forms a reasonable approximation of what messages a node should accept, without revealing F (and, for extra security, the username) for any user.
+$B(u)$ now forms a reasonable approximation of what messages a node should accept, without revealing $I(u)$ (and, for extra security, the username) for any user.
 
-When two nodes meet, they can exchange their I filters, and then exchange all relevant messages. They combine each others I filters wth their R filters, recording that, because they have recently met, they are likely to meet again.
+When two nodes make a connection, one of them takes on the role of a server, $u_s$, and the other becomes a client $u_c$. $u_c$ sends $B(u_c)$ to $u_s$. $u_s$ incorporates $B(u_c)$ into $R(u_s)$. It then usese $B(u_c)$ to figure out which messages may be of interest. It sends the list of message ids to $u_c$, which then requests the messages that it doesn't already have.
+
+Once the exchange has finished, they switch roles so $u_c$ becomes the server and $u_s$ becomes the client, and the process is repeated.
+ 
 
 \section*{Building and maintaining a friends list}
 A friends list consists of the usernames and public keys of people that a user would like to recieve messages from.
