--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">OMiN</string>
     <string name="set_username">Set Username</string>
     <string name="anonymous_uname">(anonymous)</string>
+    <string name="send">Send</string>
+    <string name="new_message">New Message</string>
 
 </resources>
